[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "labton"
version = "0.2.3"
description = "Clean minimal text-annotation tool - with buildt in control of Inter-Annotator Agreement"
readme = "README.md"
authors = [{ name = "Morten Lantow", email = "MrLantow@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["annotation", "annotation tool", "text labeling", "labeling tool", "labeling", "annotation app", "labeling", "app", "text", "NLP", "active learning", "prodigy"]
dependencies = [
    "flask>=2.2.2",
    "pyngrok>=5.1.0",
    "flask-login>=0.6.2",
    "pandas>=1.3.5",
    "pyyaml>=6.0"
]
requires-python=">=3.7"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/lantow/labton"

[project.scripts]
labton = "reader.__main__:main"


