[metadata]
name = labton
author = Morten Lantow
author_email = MrLantow@gmail.com
description = A package to label data and perform aktive learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lantow/labton
project_urls =
    Bug Tracker = https://github.com/Lantow/labton/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
labton =
    data/
        csv_text/
            *.csv